# HaVoc

./: Cargo.toml  README.md  hvoc.html
.github/workflows/: build-macos.yml  release.yml
hvoc-api/: Cargo.toml
hvoc-api/src/: lib.rs
hvoc-api/src/handlers/: board.rs  forum.rs  identity.rs  sync.rs  ws.rs
hvoc-cli/src/: main.rs
hvoc-core/: Cargo.toml
hvoc-core/src/: crypto.rs  identity.rs  lib.rs  object.rs  seed.rs
hvoc-store/src/: bootstrap.rs  lib.rs  migrations.rs  repos.rs
hvoc-veilid/src/: crypto.rs  node.rs  sync.rs
scripts/: build-release.sh  create-dmg.sh  create-macos-app.sh
