[package]
name = "hvoc-api"
version = "0.1.0"
edition = "2021"

[dependencies]
hvoc-core   = { path = "../hvoc-core" }
hvoc-veilid = { path = "../hvoc-veilid" }
hvoc-store  = { path = "../hvoc-store" }
tokio       = { workspace = true }
axum        = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
futures     = { workspace = true }
veilid-core = { workspace = true }
anyhow      = { workspace = true }
chrono      = { workspace = true }
base64      = { workspace = true }
hex         = { workspace = true }
blake3      = { workspace = true }
reqwest     = { workspace = true }
