[package]
name = "hvoc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde         = { workspace = true }
serde_json    = { workspace = true }
blake3        = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
hex           = { workspace = true }
ed25519-dalek = { workspace = true }
sha2          = { workspace = true }
